--- a/src/Main/Tablebar.css
+++ b/src/Main/Tablebar.css
@@ -71,7 +71,7 @@
 
 .alternate .wrap-tablebar {
 
-    background: linear-gradient(#ff7700 , #c23616);
+    background: linear-gradient(#ff7700 , #da583b);
 }
 
 
